--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
-  <h1>¡Hola Mundo!</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Blog sobre el Orden</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #FFA500; /* naranja */
+            color: #ffffff; /* texto blanco */
+            margin: 40px;
+        }
+
+        h1 {
+            text-align: center;
+            color: #ffffff;
+            border-bottom: 3px solid #007BFF; /* azul */
+            padding-bottom: 10px;
+        }
+
+        article {
+            background-color: #FFB347; /* naranja más claro */
+            padding: 20px;
+            margin-bottom: 20px;
+            border-left: 5px solid #007BFF; /* azul */
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            border-radius: 5px;
+        }
+
+        h2 {
+            color: #ffffff;
+            border-left: 4px solid #007BFF; /* azul */
+            padding-left: 10px;
+        }
+
+        p {
+            color: #000000; /* texto en negro para mejor contraste */
+            font-size: 16px;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>Blog sobre el orden</h1>
+
+    <article>
+        <h2>1. ¿Qué es el orden?</h2>
+        <p>El orden es la organización lógica de elementos. Ayuda a optimizar recursos y mejorar la claridad en cualquier entorno, desde el hogar hasta el trabajo.</p>
+    </article>
+
+    <article>
+        <h2>2. El orden en el tiempo</h2>
+        <p>Planificar el día y establecer prioridades es esencial. El orden temporal permite enfocarse en lo importante y reducir la ansiedad.</p>
+    </article>
+
+    <article>
+        <h2>3. Orden en el espacio físico</h2>
+        <p>Un ambiente ordenado facilita la concentración. La limpieza y el acomodo visual influyen directamente en el bienestar personal.</p>
+    </article>
+
+    <article>
+        <h2>4. Orden digital</h2>
+        <p>Organizar archivos, correos y aplicaciones mejora la eficiencia digital. El orden en el entorno virtual es tan necesario como en el físico.</p>
+    </article>
+
+    <article>
+        <h2>5. Orden y flexibilidad</h2>
+        <p>Ser ordenado no implica rigidez. Saber cuándo adaptarse o improvisar también forma parte del equilibrio necesario para una vida organizada.</p>
+    </article>
+
+</body>
+</html>
