--- a/index.html
+++ b/index.html
@@ -6,67 +6,87 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #FFA500; /* naranja */
-            color: #ffffff; /* texto blanco */
-            margin: 40px;
+            background-color: orange;
+            color: black;
+            margin: 0;
+            padding: 0;
         }
-
-        h1 {
+        header {
             text-align: center;
-            color: #ffffff;
-            border-bottom: 3px solid #007BFF; /* azul */
-            padding-bottom: 10px;
-        }
-
-        article {
-            background-color: #FFB347; /* naranja más claro */
+            background-color: blue;
+            color: white;
             padding: 20px;
-            margin-bottom: 20px;
-            border-left: 5px solid #007BFF; /* azul */
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
         }
-
-        h2 {
-            color: #ffffff;
-            border-left: 4px solid #007BFF; /* azul */
-            padding-left: 10px;
+        h1, h2 {
+            font-weight: bold;
+            font-size: 2em;
+            color: white;
         }
-
-        p {
-            color: #000000; /* texto en negro para mejor contraste */
-            font-size: 16px;
+        section {
+            padding: 20px;
+            border-bottom: 2px solid blue;
+        }
+        img {
+            display: block;
+            margin: 20px auto;
+            max-width: 400px;
+            border: 5px solid blue;
+        }
+        .button-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .button-container a {
+            background-color: blue;
+            color: white;
+            padding: 12px 20px;
+            text-decoration: none;
+            border-radius: 8px;
+            font-weight: bold;
+        }
+        .button-container a:hover {
+            background-color: darkblue;
         }
     </style>
 </head>
 <body>
+    <header>
+        <h1>Blog sobre el Orden</h1>
+    </header>
 
-    <h1>Blog sobre el orden</h1>
+    <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSncLhDV4z12epgjtgmL9H6Z2ydgVYZrinW5zNZNoxt7iCCBkubimro-lXe_pf_e3UU_ICwdZ6QqFZFwwkxTI0F1L2mn7p3ihbZfYKOMio" alt="Imagen sobre el orden">
 
-    <article>
-        <h2>1. ¿Qué es el orden?</h2>
-        <p>El orden es la organización lógica de elementos. Ayuda a optimizar recursos y mejorar la claridad en cualquier entorno, desde el hogar hasta el trabajo.</p>
-    </article>
+    <section>
+        <h2>1. El Orden en la Naturaleza</h2>
+        <p>La naturaleza nos enseña que cada cosa tiene un lugar y un tiempo. Las estaciones, el ciclo del agua y el crecimiento de las plantas muestran un orden que inspira al ser humano.</p>
+    </section>
 
-    <article>
-        <h2>2. El orden en el tiempo</h2>
-        <p>Planificar el día y establecer prioridades es esencial. El orden temporal permite enfocarse en lo importante y reducir la ansiedad.</p>
-    </article>
+    <section>
+        <h2>2. El Orden en la Vida Cotidiana</h2>
+        <p>Organizar nuestra casa y nuestros objetos personales permite mayor claridad mental y reduce el estrés.</p>
+    </section>
 
-    <article>
-        <h2>3. Orden en el espacio físico</h2>
-        <p>Un ambiente ordenado facilita la concentración. La limpieza y el acomodo visual influyen directamente en el bienestar personal.</p>
-    </article>
+    <section>
+        <h2>3. El Orden en el Trabajo</h2>
+        <p>La productividad aumenta cuando hay un entorno ordenado, con prioridades claras y espacios limpios.</p>
+    </section>
 
-    <article>
-        <h2>4. Orden digital</h2>
-        <p>Organizar archivos, correos y aplicaciones mejora la eficiencia digital. El orden en el entorno virtual es tan necesario como en el físico.</p>
-    </article>
+    <section>
+        <h2>4. Marie Kondo y el Método KonMari</h2>
+        <p>Marie Kondo propone quedarse solo con aquello que nos genera alegría, desechando lo innecesario. Su método se ha difundido mundialmente.</p>
+        <div class="button-container">
+            <a href="marie-kondo.html">Si querés conocer más sobre la vida de Marie Kondo, presiona aquí</a>
+        </div>
+    </section>
 
-    <article>
-        <h2>5. Orden y flexibilidad</h2>
-        <p>Ser ordenado no implica rigidez. Saber cuándo adaptarse o improvisar también forma parte del equilibrio necesario para una vida organizada.</p>
-    </article>
+    <section>
+        <h2>5. El Orden Interior</h2>
+        <p>No solo se trata de objetos físicos, sino también de organizar pensamientos y emociones.</p>
+    </section>
 
+    <section>
+        <h2>6. Orden y Belleza</h2>
+        <p>El orden permite que la belleza resplandezca, tanto en los espacios como en la vida personal.</p>
+    </section>
 </body>
 </html>
